--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,14 +43,14 @@
         android:id="@+id/edt_write2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/txt_read2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txt_read2"
-        app:layout_constraintTop_toBottomOf="@+id/edt_write" />
+        app:layout_constraintTop_toTopOf="@+id/txt_read2" />
 
     <Button
         android:id="@+id/btn_write"
@@ -66,7 +66,7 @@
         android:id="@+id/edt_write"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -77,7 +77,7 @@
 
     <TextView
         android:id="@+id/txt_read1"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="read1"
@@ -87,7 +87,7 @@
 
     <TextView
         android:id="@+id/txt_read2"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="read2"
@@ -99,6 +99,7 @@
         android:id="@+id/imageView2"
         android:layout_width="150dp"
         android:layout_height="100dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
