--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,17 @@
         app:layout_constraintStart_toStartOf="@+id/edt_write"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_read2"
+        app:layout_constraintEnd_toEndOf="@+id/edt_write"
+        app:layout_constraintStart_toStartOf="@+id/edt_write"
+        app:layout_constraintTop_toTopOf="@+id/txt_read2" />
+
     <TextView
         android:id="@+id/txt_udlæs"
         android:layout_width="wrap_content"
@@ -43,24 +54,21 @@
         android:id="@+id/edt_write2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_read2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txt_read2"
-        app:layout_constraintTop_toTopOf="@+id/txt_read2" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_write" />
 
     <Button
         android:id="@+id/btn_write"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="128dp"
         android:text="Opsætning"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_write2" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner1" />
 
     <EditText
         android:id="@+id/edt_write"
@@ -69,7 +77,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="@+id/txt_read1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txt_read1"
@@ -125,6 +133,6 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_write"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_write2" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_read2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
