--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="number"
+        android:text="1"
         app:layout_constraintBottom_toBottomOf="@+id/txt_read1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txt_read1"
